--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,12 @@ background-repeat: no-repeat;
 background-position: top left, bottom right;
 
 }
+.secondary-bg{
+    background-color: #FFF8F3;
+}
+.another-bg{
+    background-color: white;
+}
 /* nav styles */
 
 nav{
@@ -83,4 +89,132 @@ nav li a{
 .des{
     font-size: 18px;
     font-weight: regular;
+}
+/* main styles */
+
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
+
+/* about section  */
+
+.about-title{
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+
+}
+.about-des{
+    font-size: 18px;
+    font-weight: regular;
+    color: #757575;
+}
+.about{
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+    margin-top: 130px;
+}
+.item-des{
+
+}
+.about-items{
+    display: flex;
+  justify-content: space-around;
+  margin-top: 40px;
+  margin-left: 22px;
+  margin-right: 22px;
+}
+.about-item{
+   
+
+}
+.item-title{
+    color: #757575;
+}
+.item-des{
+    color: #181818;
+}
+
+/* what i do part  */
+.skill{
+    
+}
+.skill-title{
+    font-size: 35px;
+    font-weight: bold;
+    text-align: center;
+}
+.skill-des{
+    font-size: 18px;
+    font-weight: regular;
+    text-align: center;
+    padding-bottom: 30px;
+}
+
+.skill-items{
+    display: flex;
+    justify-content: space-around;
+    gap: 24px;
+
+   
+}
+.skill-cont{
+    padding: 30px;
+    box-shadow: 0px 6px 50px 0px #929090;
+    border-radius: 5px;
+}
+.skill-name{
+    font-size: 20px;
+    font-weight: bold;
+}
+.skill2{
+    font-size: 16px;
+    font-weight: regular;
+    
+}
+
+/* resume part  */
+
+.section-title{
+    font-size: 35px;
+    font-weight: bold;
+    text-align: center;
+    color: #181818;
+    margin-bottom: 40px;
+}
+.resume-cont{
+    display: flex;
+    gap: 20px;
+}
+.resume-col-title{
+    color: #474747;
+    font-size: 30px;
+    font-weight: bold;
+}
+.experience-title{
+    font-size: 25px;
+    color: #474747;
+    font-weight: bold;
+}
+.experience-sub-title{
+    font-size: 20px;
+    color: #757575;
+    font-weight: semibold;
+}
+
+.experience-des{
+    font-size: 16px;
+    color: #929090;
+    font-weight: regular;
+}
+.down{
+   align-items: center;
+   margin-top: 70px 171px;
 }
